--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,11 @@
 
+v2.0 - Support for Adaptive Cards
+- support for AttachmentActions
+- offical support for webhook automation
+- new WEBEX_API env variable to point to an alternative HTTPS endpoint (example: api emulator on Heroku, Glitch or over ngork)
+
 v1.0 - Webex Teams rebrand
-- Addd support for 'webex.bot' domain
+- Added support for 'webex.bot' domain
 - Added support for ACCESS_TOKEN
 - SPARK_TOKEN deprecated, but still supported
 - Documentation updates (removed Spark mentions)
